
htmldir = $(datadir)/doc/@PACKAGE@

html_DATA = FtpAccess.html FtpInit.html FtpPut.html FtpSysType.html \
			FtpCDUp.html FtpLastResponse.html FtpPwd.html FtpWrite.html \
			FtpChdir.html ftplib.html FtpQuit.html Makefile.am \
			FtpClose.html FtpLogin.html FtpRead.html model.html \
			FtpConnect.html FtpMkdir.html FtpRename.html qftp.html \
			FtpDelete.html FtpModDate.html FtpRmdir.html FtpDir.html \
			FtpNlst.html FtpSite.html FtpGet.html FtpOptions.html FtpSize.html
			
